# kanji

./: .gitignore  ChangeLog.md  LICENSE  README.md  kanji.cabal  kanji.txt  package.yaml  random.hs  shuffle.hs  tae-kim.md
resources/: kanji.json  kanji.txt
resources/fetcher/: 3-star.txt  4-star.txt  5-star.txt  6-star.txt  main.js  package.json
resources/fetcher/data/: 1  10  100  1000  1001  1002  1003  1004  1005  1006  1007  1008  1009  101  1010  1011  1012  1013  1014  1015  1016  1017  1018  1019  102  1020  1021  1022  1023  1024  1025  1026  1027  1028  1029  103  1030  1031  1032  1033  (+1728 more)
resources/kanjidamage/: clean.scala  curated-kanji.txt  favorite-kanji.txt  quizlet.tsv
resources/old/: curated-kanji.tsv  curated-kanji.txt  old-favorite-kanji.txt
src/: HelloApi.hs  KanjiApi.hs  Main.hs  random.hs
