name:                kanji
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              kavinvin
maintainer:          kavinvin.vin@gmail.com
category:            Language
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable kanji
  main-is:             Main.hs
  other-modules:       
      HelloApi
  -- other-extensions:    
  build-depends:       base >=4.10 && <4.11
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -pgmL markdown-unlit
  build-depends:
      base >= 4.7 && <4.12
    , aeson
    , aeson-compat
    , attoparsec
    , base-compat
    , bytestring
    , containers
    , directory
    , http-api-data
    , http-client
    , http-media
    , http-types
    , mtl
    , string-conversions
    , text
    , transformers
    , wai
    , warp
  build-depends:
      servant
    , servant-server
    , servant-client
    , servant-docs
  build-depends:
      blaze-html   >= 0.9.0.1 && < 0.10
    , blaze-markup >= 0.8.0.0 && < 0.9
    , cookie       >= 0.4.3   && < 0.5
    , js-jquery    >= 3.2.1   && < 3.3
    , lucid        >= 2.9.9   && < 2.10
    , mtl-compat   >= 0.2.1   && < 0.3
    , random       >= 1.1     && < 1.2
    , servant-js   >= 0.9     && < 0.10
    , time         >= 1.4.2   && < 1.9
