name:                kanji
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              kavinvin
maintainer:          kavinvin.vin@gmail.com
category:            Language
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable kanji
  main-is:             Main.hs
  other-modules:       
      HelloApi
  -- other-extensions:    
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -pgmL markdown-unlit
  build-depends:
      base >= 4.7 && <4.12
    , aeson
    , aeson-compat
    , attoparsec
    , base-compat
    , bytestring
    , containers
    , directory
    , http-api-data
    , http-client
    , http-media
    , http-types
    , mtl
    , string-conversions
    , text
    , transformers
    , wai
    , warp
    , servant
    , servant-server
